--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -35,15 +35,35 @@ block content %}
       autofocus = true) }}
     </div>
     <div class="form-group">
+      <label for="website">Website</label>
+      <small>Website Link</small>
+      {{ form.website(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="facebook_link">Facebook</label>
+      <small>Facebook link</small>
+      {{ form.facebook_link(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="image_link">Profile Picture</label>
+      <small>Upload a photo</small>
+      {{ form.image_link(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
       <label for="genres">Genres</label>
       <small>Ctrl+Click to select multiple</small>
       {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by
       commas', autofocus = true) }}
     </div>
     <div class="form-group">
-      <label for="genres">Facebook Link</label>
-      {{ form.facebook_link(class_ = 'form-control', placeholder='http://',
-      autofocus = true) }}
+      <label for="seeking_talent">Seeking Talent</label>
+      <small>Are you Looking for new talent?</small>
+      {{ form.seeking_talent(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="seeking_description">Seeking Description</label>
+      <small>What are you looking for?</small>
+      {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
     </div>
     <input
       type="submit"
