--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -59,7 +59,7 @@ block content %}
 
     <input
       type="submit"
-      value="Create Venue"
+      value="Create Artist"
       class="btn btn-primary btn-lg btn-block"
     />
   </form>
